--- a/examples/swapi-ssr/src/css/App.css
+++ b/examples/swapi-ssr/src/css/App.css
@@ -1,6 +1,11 @@
 body {
 	font-family: sans-serif;
 	margin: 0;
+	background-color: #faa;
+}
+
+body.csr {
+	background-color: #fff;
 }
 
 .contents {
