--- a/examples/transition/src/css/App.css
+++ b/examples/transition/src/css/App.css
@@ -2,3 +2,64 @@ body {
   font-family: sans-serif;
   margin: 0;
 }
+
+.Screen {
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.Screen .title {
+  font-size: 3em;
+}
+
+.Screen .control-pane button {
+  font-size: 2em;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+.ScreenError {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.ScreenLoading {
+  background-color: #ffaaff;
+}
+
+.ScreenLoading .spinner {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+
+.ScreenLoading .spinner:after {
+  content: " ";
+  display: block;
+  border-radius: 50%;
+  width: 0;
+  height: 0;
+  margin: 8px;
+  box-sizing: border-box;
+  border: 32px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  animation: Loading 1.2s infinite;
+}
+
+@keyframes Loading {
+  0% {
+    transform: rotate(0);
+    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+  50% {
+    transform: rotate(900deg);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  100% {
+    transform: rotate(1800deg);
+  }
+}
