--- a/examples/transition/src/css/ScreenDelta.css
+++ b/examples/transition/src/css/ScreenDelta.css
@@ -39,6 +39,10 @@
   z-index: 2;
 }
 
+.out .ScreenDelta .detour-warning .dialog-box {
+  visibility: hidden;
+}
+
 .ScreenDelta .detour-warning .dialog-box .buttons {
   display: flex;
   justify-content: flex-end;
